# CMakeDemo

./: CMakeLists.txt  README.md  build.sh  main.cpp
include/test2/: test2.h
src/: CMakeLists.txt
src/test1/: CMakeLists.txt  test.cpp  test.h  test1.cpp  test1.h
src/test2/: CMakeLists.txt  test2.cpp
