#设置工程名称
PROJECT(CMakeDemo)
#自己定制
SET(MY_TARGET demo)
SET(MY_LINK test1 test2)

#设置CMake最小版本
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
#设置编译器
SET(CMAKE_CXX_COMPILE "g++")

#设置构建类型，及相应的编译选项
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -g -Wall -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")

#设置执行文件输出目录
SET(EXECUTABLES_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
#设置库输出路径
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

MESSAGE("++++++++++++++++++++Start Build++++++++++++++++++++")

#当前目录的文件
AUX_SOURCE_DIRECTORY(. SRC_LIST)
ADD_SUBDIRECTORY(src)

INCLUDE_DIRECTORIES(include)
LINK_DIRECTORIES(lib)

SET(EXTRA_LIBS ${EXTRA_LIBS} ${MY_LINK})

ADD_EXECUTABLE(${MY_TARGET} ${SRC_LIST})

TARGET_LINK_LIBRARIES(${MY_TARGET} ${EXTRA_LIBS})
